# webmote-rs

./: Cargo.toml  build.rs
src/: controllers.rs  lib.rs  main.rs  public.rs
src/controllers/: channel.rs  joystick.rs  socket.rs
src/proto/: signaling.proto  webmote.proto
