[package]
name = "webmote-rs"
version = "0.1.0"
edition = "2021"
authors = ["Vinicius Rangel <me@viniciusrangel.dev>"]

[build-dependencies]
prost-build = "0.11"

[dependencies]
anyhow = "1.0"
bytes = "1.4"
clap = { version = "4.3", features = ["derive", "env"] }
env_logger = "0.10"
futures-util = "0.3"
lazy_static = "1.4"
log = "0.4"
prost = "0.11"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.29", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
vigem-client = "0.1"
warp = { version = "0.3", features = ["websocket"] }
webrtc = "0.8"
